--- a/subsection_Extension_to_Random_Forests__.tex
+++ b/subsection_Extension_to_Random_Forests__.tex
@@ -2,38 +2,18 @@
 \textbf{L Breiman Paper}\cite{breiman-randomforests}
 
 
-Random Forests where a natural ensemble extension of Decision Trees first described by \cite{HoFirstRandomForest}. 
+Random Forests where a natural ensemble extension of Decision Trees as base learners. First described by \cite{HoFirstRandomForest} they combine a number of trees with a technique called bootstrap aggregation or \textit{bagging}. 
 
-Random Forests look like a natural 
-
-For the case of Random Forests, first derived in 
-\textit{
-Random forests are a combination of tree predictors
-such that each tree depends on the values of a random
-vector sampled independently and with the same
-distribution for all trees in the forest.}
-
-\textit{The generalization error for forests converges a.s. to a limit
-as the number of trees in the forest becomes large}
-
-\textit{The generalization error of a forest of tree classifiers depends on the strength of the individual trees in the
-forest and the correlation between them. Using a random selection of features to split each node yields
-error rates that are more with respect to noise.}
-
-\textit{Internal estimates monitor error, strength, and correlation and these are used to show
-the response to increasing the number of features used in the splitting. Internal estimates are also used to
-measure variable importance.
-d}
+This algorithm is run by \textit{randomizing } the way we build each base learner. For example, we could select i.i.d samples from the training set to build each specific tree, or we could sample a subset of features at each decision node. Also, when splitting the data at a tree node, we could choose a random split among the $K$ best splits at that stage.
+ 
+When using a base learner which has low-bias and high-variance, bagging the estimators will produce a new learner which has a reduced overall variance and slightly worse bias than each single tree. Note that if we have a selection of $K$ i.i.d. random variables with common variance $\sigma^2$, then the average of this selection will have variance $\frac{\sigma^2}{K}$. This is the idea behind ensembling all of the trees.
 
 
+The generalization error for the forests will converge almost surely as we increase the number of base estimators used to train the model. This error will depend uniquely on the predictive error of each base learner and collectively from the correlation among them.
 
-Random subspace: each tree is grown using a random selection of features.
+In classification problems the forest will output a solution by making the base learners vote on the  target class. For regression problems, the average of the outputs will be taken as the output of the algorithm. The procedure for sampling new predictions is fast once the forest has been constructed, but they are computationally heavy structures.
 
-Given $K$ number of trees, let $\Theta_k$ encode the parameters for the $k$-th tree and $h(\textbf{x},\Theta_k)$ the corresponding classifier. Let $N$ be the number of samples in the training set. The creation of a random forests involves an iterative procedure where at each $k$ step $\Theta_k$ is drawn from the same distribution but independently of the previous parameters $\Theta_1, \ ..., \ \Theta_{k-1}$ created at previous steps. 
-
-Bagging: to grow each tree a random selection (without replacement) on the training set is used. 
-
-Random split selection: choose a random split among the $K$ best splits. $\Theta$ will be encoded by a vector of randomly drawn integers from 1 to $M$ which is part of the model's hyperparameters.
+Given $K$ number of trees, let $\Theta_k$ encode the parameters for the $k$-th tree and $h(\textbf{x},\Theta_k)$ the corresponding classifier. Let $N$ be the number of samples in the training set. The creation of a random forests involves an iterative procedure where at each $k$ step $\Theta_k$ is drawn from the same distribution but independently of the previous parameters $\Theta_1, \ ..., \ \Theta_{k-1}$ created at previous steps. $\Theta$ will be encoded by a vector of randomly drawn integers from 1 to $M$ which is part of the model's hyperparameters.
 
 Let $\{h_k(\textbf{x})\}_{i=1}^K$  \footnote{There is an abuse of notation by noting trees as $h_k(\textbf{x}$ and not $h(\textbf{x}, \Theta_k)$ } be a set of classifying trees and let $I$ denote the indicator function.  Define the margin function as
 
@@ -51,7 +31,7 @@ $$ P_{\textbf{x}, \textbf{y} } ( P_{\Theta} (h(\textbf{x}, \Theta) = \textbf{x})
 \subsubsection{Proof}
 The proof follows from seeing that given a training set, a parameter $\Theta$ and a class $j$ then 
 $$\forall \textbf{x} \lim_{K\to\infty} \frac{1}{K} \sum_{k=1}^K I(h_k(\textbf{x}) = j) \ =   \ P_\Theta(h(\theta,\textbf{x}) = j) $$
- almost surely.
+almost surely.
 
 By looking at the nature of each tree, $\{\textbf{x} / h_k(\textbf{x}, \Theta) = j \}$ denotes a union of hyper-rectangles partitioning feature space. And given the finite size of the training set, there can only be a finite set of these unions. Let $S_1, ..., S_K$ be an indexation of these unions and define $\phi(\Theta) = k $ if $\{\textbf{x} / h(\textbf{x}, \Theta) = j \} = S_k$. 
 
@@ -81,7 +61,7 @@ Random Forests are built upon a bag of weaker classifier, of which each individu
 %\end{lemma}
 
 \begin{theorem}
-There is an upper bound for the generalization error.
+	There is an upper bound for the generalization error.
 \end{theorem}
 
 Define $\hat{j}(\textbf{x},\textbf{y})$ as $arg max_{j\neq \textbf{y}} P_{\Theta}(h(\textbf{x}) = j)$ and let the margin function for a random forest be defined as
@@ -109,14 +89,14 @@ This in turn implies that
 \begin{equation}\label{eq:rf-marginFunVar}
 \begin{split}
 var(mr) & =  \Expect_{\Theta, \Theta'} 
-			\left[ 
-				cov_{\textbf{x},\textbf{y}}
-				(rmg(\Theta,\textbf{x},\textbf{y} )rmg(\Theta',\textbf{x},\textbf{y} )) 
-			\right] \\
+\left[ 
+cov_{\textbf{x},\textbf{y}}
+(rmg(\Theta,\textbf{x},\textbf{y} )rmg(\Theta',\textbf{x},\textbf{y} )) 
+\right] \\
 & =  \Expect_{\Theta, \Theta'}
-			\left[ 
-				\rho(\Theta, \Theta')\sigma(\Theta)\sigma(\Theta')
-			\right] 
+\left[ 
+\rho(\Theta, \Theta')\sigma(\Theta)\sigma(\Theta')
+\right] 
 \end{split}
 \end{equation}
 
@@ -127,15 +107,15 @@ Equation \ref{eq:rf-marginFunVar} in turn implies that
 \begin{equation}\label{eq:rf-varianceBound}
 \begin{split}
 var(mr) & =  \overline{\rho} (\Expect_{\Theta}\left[ \sigma(\Theta)\right] )^2 \\
-		& \leq  \overline{\rho} \Expect_{\Theta} \left[ var(\Theta) \right] 
+& \leq  \overline{\rho} \Expect_{\Theta} \left[ var(\Theta) \right] 
 \end{split}
 \end{equation}
 
 where we have conveniently defined $\overline{\rho}$ as 
 
 \begin{equation}\label{eq:rf-meanCorrelation}
- \frac{\Expect_{\Theta, \Theta'} \left[ \rho(\Theta, \Theta') \sigma(\Theta) \sigma(\Theta')\right]}
- {\Expect_{\Theta, \Theta'} \left[ \sigma(\Theta) \sigma(\Theta')\right]}
+\frac{\Expect_{\Theta, \Theta'} \left[ \rho(\Theta, \Theta') \sigma(\Theta) \sigma(\Theta')\right]}
+{\Expect_{\Theta, \Theta'} \left[ \sigma(\Theta) \sigma(\Theta')\right]}
 \end{equation}
 
 Note this is the mean value of the correlation.
@@ -146,7 +126,7 @@ $$s =  \Expect_{\textbf{x},\textbf{y}} \left[ mr(\textbf{x},\textbf{y} ) \right]
 
 Assuming that $s \geq 0$ we have that the prediction error is bounded by 
 \begin{equation}\label{eq:rf-predictiveErrorBound1}
-	PE^* \leq var(mr)/s^2
+PE^* \leq var(mr)/s^2
 \end{equation}
 by Chebyshev's inequality. On the other hand it can also be noted that
 
@@ -154,15 +134,15 @@ by Chebyshev's inequality. On the other hand it can also be noted that
 \begin{equation}\label{eq:rf-expectedVarBound}
 \begin{split}
 \Expect_{\Theta} \left[ var(\Theta) \right]  & \leq \Expect_{\Theta} \left[ \Expect_{\textbf{x},\textbf{y}}\left[ rmg(\Theta,\textbf{x},\textbf{y})   \right]  \right]^2 -s^2  \\
-								& \leq 1-s^2
+& \leq 1-s^2
 \end{split}
 \end{equation}
 
 \begin{proof}
-We can use  \ref{eq:rf-varianceBound}, \ref{eq:rf-predictiveErrorBound1} and \ref{eq:rf-expectedVarBound} to establish the upper bound for the prediction error we are looking for
-\begin{equation}\label{eq:rf-PEBound}
-PE^* \leq \overline{\rho}\frac{(1-s^2)}{s^2}
-\end{equation}
+	We can use  \ref{eq:rf-varianceBound}, \ref{eq:rf-predictiveErrorBound1} and \ref{eq:rf-expectedVarBound} to establish the upper bound for the prediction error we are looking for
+	\begin{equation}\label{eq:rf-PEBound}
+	PE^* \leq \overline{\rho}\frac{(1-s^2)}{s^2}
+	\end{equation}
 \end{proof}
 
 This bound on the generalization error shows the importance of the strength of each individual weak classifier in the forest and the correlation interdependence among them. The author \cite{breiman-randomforests} of the algorithm remarks here that this bound may not be strong. He also puts special importance on the ratio between the correlation and the strength $\frac{\overline{\rho}}{s^2}$ where this should be as small as possible to build a strong classifier. 
@@ -177,8 +157,11 @@ Also, the correlation between $I(h(\textbf{x}, \Theta) = \textbf{y})$ and \  $I(
 $$ \overline{\rho} =  \Expect_{\Theta,\Theta'} \left[ \rho \left( h(\cdot{},\Theta) ,h(\cdot{},\Theta') \right)   \right] $$
 
 
-\textbf{VARIABLE IMPORTANCE}
+\subsubsection{Benefits and Drawbacks of Random Forests}
 
-\textit{Internal estimates monitor error, strength, and correlation and these are used to show
-	the response to increasing the number of features used in the splitting. Internal estimates are also used to measure variable importanced}
+
+
+
+Another useful tool derived from forests is that of measuring variable importance. To do this, we must first select a candidate feature to be analyzed. Then given a node in a tree where data has to be split, we compare the results of the improvement in the split performance, as measured by some pre-selected criteria, with and without the candidate. These results are recorded and averaged across all trees and all of the split scenarios. 
+
 
